--- a/src/main/resources/templates/Fragments/logout.html
+++ b/src/main/resources/templates/Fragments/logout.html
@@ -2,15 +2,14 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Deseja mesmo sair?</h5>
                     <button class="close" type="button" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">×</span>
                     </button>
                 </div>
-                <div class="modal-body">Você realmente deseja sair?</div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancelar</button>
-                    <a class="btn btn-primary" th:href="@{/logout}">Logout</a>
+                    <a class="btn btn-primary" th:href="@{/logout}">Sair</a>
                 </div>
             </div>
         </div>
