--- a/src/main/resources/templates/Usuario/Usuario.html
+++ b/src/main/resources/templates/Usuario/Usuario.html
@@ -43,7 +43,7 @@
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                                Aluno</div>
+                                                Usuário</div>
                                             <div class="h5 mb-0 font-weight-bold text-gray-800"><span
                                                     th:text="${username}"></span></div>
                                         </div>
