--- a/src/main/resources/templates/Aluno/FormEditAluno.html
+++ b/src/main/resources/templates/Aluno/FormEditAluno.html
@@ -25,7 +25,7 @@
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
-                    <form class="form-salva-aluno" th:action="@{/salva_edicao}" th:object="${aluno}" method="PUT">
+                    <form class="form-salva-aluno" th:action="@{/salva_edicao}" th:object="${aluno}" method="GET">
                         <div class="form-group">
                             <div class="input-group mb-3">
                                 <div class="input-group-prepend" style="width: 40px;">
