--- a/src/main/resources/templates/Aluno/ListAluno.html
+++ b/src/main/resources/templates/Aluno/ListAluno.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
     xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-
+<title>Alunos</title>
 <head th:replace="Fragments/header :: header">
 </head>
 <link href="vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet" />
@@ -77,7 +77,7 @@
                                         <tr th:each="alunos:${alunos}"
                                             th:if="${alunos.ultimaAvaliacao != null and alunos.ativo == true}">
                                             <td class="column1"><span th:text="${alunos.nome}"> </span></td>
-                                            <td class="column2 data"><span th:text="${alunos.dataNascimento}"> </span>
+                                            <td class="column2 data"><span th:text="${alunos.getDataNascimentotoString()}"> </span>
                                             </td>
                                             <td th:switch="${alunos.sexo}">
                                                 <span th:case="'1'">MASCULINO</span>
@@ -86,12 +86,15 @@
                                             <td class="column4"><span th:text="${alunos.email}"> </span></td>
                                             <td class="column5"><span th:text="${alunos.cpf}"> </span></td>
                                             <td>
-                                                <a class="btn btn-outline-primary fas fas fa-address-book" data-toggle="tooltip" data-placement="top" title="Avalição"
+                                                <a class="btn btn-outline-primary fas fas fa-address-book"
+                                                    data-toggle="tooltip" data-placement="top" title="Avalição"
                                                     th:href="@{|/avaliacao/${alunos.id}?avaliacao=1|}"
                                                     role="button"></a>
-                                                <a class="btn btn-outline-secondary fas fa-edit" data-toggle="tooltip" data-placement="top" title="Editar"
+                                                <a class="btn btn-outline-secondary fas fa-edit" data-toggle="tooltip"
+                                                    data-placement="top" title="Editar"
                                                     th:href="@{|/edita/${alunos.id}|}"></a>
-                                                <button type="button" data-toggle="modal" data-target="#confirm" data-tt="tooltip" title="Excluir"
+                                                <button type="button" data-toggle="modal" data-target="#confirm"
+                                                    data-tt="tooltip" title="Excluir"
                                                     class="btn btn-outline-danger Button abreModal fas fa-trash-alt"
                                                     th:attr="value=${alunos.id}"></button>
                                             </td>
@@ -120,7 +123,7 @@
                                         <tr th:each="alunos:${alunos}"
                                             th:if="${alunos.ultimaAvaliacao == null and alunos.ativo == true}">
                                             <td cclass="column1"><span th:text="${alunos.nome}"> </span></td>
-                                            <td class="column2 data"><span th:text="${alunos.dataNascimento}"> </span>
+                                            <td class="column2"><span th:text="${ alunos.getDataNascimentotoString() }"> </span>
                                             </td>
                                             <td th:switch="${alunos.sexo}">
                                                 <span th:case="'1'">MASCULINO</span>
@@ -129,11 +132,14 @@
                                             <td class="column4"><span th:text="${alunos.email}"> </span></td>
                                             <td class="column5"><span th:text="${alunos.cpf}"> </span></td>
                                             <td>
-                                                <a class="btn btn-outline-primary fas fa-address-book" data-toggle="tooltip" data-placement="top" title="Avaliar"
+                                                <a class="btn btn-outline-primary fas fa-address-book"
+                                                    data-toggle="tooltip" data-placement="top" title="Avaliar"
                                                     th:href="@{|/avaliar/${alunos.id}|}" role="button"></a>
-                                                <a class="btn btn-outline-secondary fas fa-edit" data-toggle="tooltip" data-placement="top" title="Editar"
+                                                <a class="btn btn-outline-secondary fas fa-edit" data-toggle="tooltip"
+                                                    data-placement="top" title="Editar"
                                                     th:href="@{|/edita/${alunos.id}|}"></a>
-                                                <button type="button" data-toggle="modal" data-target="#confirm" data-tt="tooltip" title="Excluir"
+                                                <button type="button" data-toggle="modal" data-target="#confirm"
+                                                    data-tt="tooltip" title="Excluir"
                                                     class="btn btn-outline-danger Button abreModal fas fa-trash-alt"
                                                     th:attr="value=${alunos.id}"></button>
                                             </td>
@@ -161,7 +167,7 @@
                                         <tr th:each="alunos:${alunos}"
                                             th:if="${alunos.ultimaAvaliacao == null and alunos.ativo == false}">
                                             <td cclass="column1"><span th:text="${alunos.nome}"> </span></td>
-                                            <td class="column2 data"><span th:text="${alunos.dataNascimento}"> </span>
+                                            <td class="column2 data"><span th:text="${alunos.getDataNascimentotoString()}"> </span>
                                             </td>
                                             <td th:switch="${alunos.sexo}">
                                                 <span th:case="'1'">MASCULINO</span>
@@ -170,7 +176,8 @@
                                             <td class="column4"><span th:text="${alunos.email}"> </span></td>
                                             <td class="column5"><span th:text="${alunos.cpf}"> </span></td>
                                             <td>
-                                                <button type="button" data-toggle="modal" data-target="#confirmAtivar" data-tt="tooltip" title="Ativar"
+                                                <button type="button" data-toggle="modal" data-target="#confirmAtivar"
+                                                    data-tt="tooltip" title="Ativar"
                                                     class="btn btn-outline-primary fas fa-edit Button abreModal"
                                                     th:value="${alunos.id}"></button>
                                             </td>
