--- a/src/main/resources/templates/Avaliacao/FormEditarAvaliacao.html
+++ b/src/main/resources/templates/Avaliacao/FormEditarAvaliacao.html
@@ -62,7 +62,7 @@
                                             <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
                                                 Data de Nascimento</div>
                                             <div class="h5 mb-0 font-weight-bold text-gray-800"><span
-                                                    th:text="${aluno.dataNascimento}"></span></div>
+                                                    th:text="${aluno.getDataNascimentotoString()}"></span></div>
                                         </div>
                                         <div class="col-auto">
                                             <i class="fas fa-birthday-cake fa-2x text-gray-300"></i>
