--- a/src/main/resources/templates/Home/Index.html
+++ b/src/main/resources/templates/Home/Index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
     xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<title>Dashboard</title>
 
 <head th:replace="Fragments/header :: header"></head>
 <script src="https://code.highcharts.com/highcharts.js"></script>
@@ -14,6 +15,7 @@
         margin: 10px;
     }
 </style>
+
 <body>
     <div id="wrapper">
         <ul th:replace="Fragments/sideBar :: sidebar"></ul>
@@ -41,8 +43,10 @@
                                                             <div class="progress progress-sm mr-2"
                                                                 style="height: 30px;">
                                                                 <div class="avaliados progress-bar bg-info"
-                                                                    role="progressbar" th:aria-valuenow="@{dados.}" data-toggle="tooltip" data-placement="bottom" title="Avaliados"
-                                                                    aria-valuemin="0" aria-valuemax="100"></div>
+                                                                    role="progressbar" th:aria-valuenow="@{dados.}"
+                                                                    data-toggle="tooltip" data-placement="bottom"
+                                                                    title="Avaliados" aria-valuemin="0"
+                                                                    aria-valuemax="100"></div>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -67,14 +71,16 @@
                                                         <div class="col">
                                                             <div class="progress progress-sm mr-2"
                                                                 style="height: 30px;">
-                                                                <div class="homens progress-bar bg-primary" data-toggle="tooltip" data-placement="bottom" title="Homens"
-                                                                    role="progressbar" style="width: 15%"
+                                                                <div class="homens progress-bar bg-primary"
+                                                                    data-toggle="tooltip" data-placement="bottom"
+                                                                    title="Homens" role="progressbar" style="width: 15%"
                                                                     aria-valuenow="15" aria-valuemin="0"
                                                                     aria-valuemax="100"></div>
-                                                                <div class="mulheres progress-bar bg-warning" data-toggle="tooltip" data-placement="bottom" title="Mulheres"
-                                                                    role="progressbar" style="width: 30%"
-                                                                    aria-valuenow="30" aria-valuemin="0"
-                                                                    aria-valuemax="100"></div>
+                                                                <div class="mulheres progress-bar bg-warning"
+                                                                    data-toggle="tooltip" data-placement="bottom"
+                                                                    title="Mulheres" role="progressbar"
+                                                                    style="width: 30%" aria-valuenow="30"
+                                                                    aria-valuemin="0" aria-valuemax="100"></div>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -98,14 +104,16 @@
                                                         <div class="col">
                                                             <div class="progress progress-sm mr-2"
                                                                 style="height: 30px;">
-                                                                <div class="ativados progress-bar bg-success" data-toggle="tooltip" data-placement="bottom" title="Ativados"
-                                                                    role="progressbar" style="width: 15%"
-                                                                    aria-valuenow="15" aria-valuemin="0"
-                                                                    aria-valuemax="100"></div>
-                                                                <div class="inativados progress-bar bg-danger" data-toggle="tooltip" data-placement="bottom" title="Inativos"
-                                                                    role="progressbar" style="width: 30%"
-                                                                    aria-valuenow="30" aria-valuemin="0"
-                                                                    aria-valuemax="100"></div>
+                                                                <div class="ativados progress-bar bg-success"
+                                                                    data-toggle="tooltip" data-placement="bottom"
+                                                                    title="Ativados" role="progressbar"
+                                                                    style="width: 15%" aria-valuenow="15"
+                                                                    aria-valuemin="0" aria-valuemax="100"></div>
+                                                                <div class="inativados progress-bar bg-danger"
+                                                                    data-toggle="tooltip" data-placement="bottom"
+                                                                    title="Inativos" role="progressbar"
+                                                                    style="width: 30%" aria-valuenow="30"
+                                                                    aria-valuemin="0" aria-valuemax="100"></div>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -126,30 +134,30 @@
                             <div class="col">
 
                                 <div class="card ">
-                                        <h5 class="card-header">MÉDIA DE GORDURA POR GÊNERO</h5>
-                                        <div class="card-body">
-                                                <div id="lineChart" style="min-width: 310px; height: 400px; margin: 0 auto">
+                                    <h5 class="card-header">MÉDIA DE GORDURA POR GÊNERO</h5>
+                                    <div class="card-body">
+                                        <div id="lineChart" style="min-width: 310px; height: 400px; margin: 0 auto">
                                         </div>
-                                      </div>
+                                    </div>
 
                                 </div>
                             </div>
-                            
+
                         </div>
                         <div class="row">
-                                <div class="col">
-    
-                                    <div class="card ">
-                                            <h5 class="card-header">MÉDIA DE IMC POR FAIXA ETÁRIA</h5>
-                                            <div class="card-body">
-                                                <div id="lineIMC" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
-                                            </div>
-                                          </div>
-    
+                            <div class="col">
+
+                                <div class="card ">
+                                    <h5 class="card-header">MÉDIA DE IMC POR FAIXA ETÁRIA</h5>
+                                    <div class="card-body">
+                                        <div id="lineIMC" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
                                     </div>
                                 </div>
-                                
+
                             </div>
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </div>
@@ -167,11 +175,12 @@
     /*]]>*/
 </script>
 <script>
-        $(function () {
-            $('[data-toggle="tooltip"]').tooltip()
-            $("[data-tt=tooltip]").tooltip()
-        })
+    $(function () {
+        $('[data-toggle="tooltip"]').tooltip()
+        $("[data-tt=tooltip]").tooltip()
+    })
 </script>
 <script th:src="@{/js/index.js}"></script>
 <script th:src="@{/js/Graficos/HomeGraficos.js}"></script>
+
 </html>
