--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -392,7 +392,7 @@ th, td {
 .table100.ver4 th {
   font-family: Lato-Bold;
   font-size: 18px;
-  color: #4272d7;
+  color:black;
   line-height: 1.4;
 
   background-color: transparent;
