--- a/src/main/resources/templates/Home/Login.html
+++ b/src/main/resources/templates/Home/Login.html
@@ -87,7 +87,7 @@
               <div class="col-lg-6">
                 <div class="p-5">
                   <div class="text-center" style="margin-top:11vh">
-                    <h1 class="h4 text-gray-900 mb-4">Gym Experience</h1>
+                    <h1 class="h4 text-gray-900 mb-4">Bem-vindo</h1>
                   </div>
                   <form id="formLogin" method="POST" role="form" th:action="@{/login}" >
                     <div class="form-group">
